添加作者信息；

--- a/KJ1002/Views/MainWindow.xaml
+++ b/KJ1002/Views/MainWindow.xaml
@@ -75,7 +75,10 @@
                                                 ModifyClicked="WPFOkApplyModifyGetOnOffCancel_ModifyClicked"
                                                 OkClicked="WPFOkApplyModifyGetOnOffCancel_OkClicked"
                                                 OnOffClicked="WPFOkApplyModifyGetOnOffCancel_OnOffClicked" />
-
+        <TextBlock Margin="4" DockPanel.Dock="Bottom" TextWrapping="Wrap">
+            <Run>Huang YongXing -</Run>
+            <Hyperlink NavigateUri="mailto:thinkerhua@hotmail.com">thinkerhua@hotmail.com</Hyperlink>
+        </TextBlock>
 
         <TabControl>
             <TabItem Header="{tsd:Loc albl_parameters}">
