--- a/KJ1001/Views/MainWindow.xaml
+++ b/KJ1001/Views/MainWindow.xaml
@@ -83,6 +83,11 @@
                                                 ModifyClicked="WPFOkApplyModifyGetOnOffCancel_ModifyClicked"
                                                 OkClicked="WPFOkApplyModifyGetOnOffCancel_OkClicked"
                                                 OnOffClicked="WPFOkApplyModifyGetOnOffCancel_OnOffClicked" />
+        <TextBlock Margin="4" DockPanel.Dock="Bottom" TextWrapping="Wrap">
+            <Run>Huang YongXing -</Run>
+            <Hyperlink NavigateUri="mailto:thinkerhua@hotmail.com">thinkerhua@hotmail.com</Hyperlink>
+        </TextBlock>
+
         <TabControl>
             <TabItem Header="{tsd:Loc albl_parameters}">
                 <DockPanel>
